refactored store and styles the product list

--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -14,6 +14,7 @@ html, body{
 	//background-color:@body-background !important;
 	background-color:black !important;
 
+	font-family: @paragraph-font-family !important;
 	color: @base-font-color !important;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -25,9 +26,4 @@ html, body{
 	margin:auto;
 	height:100%;
 	background-color:@body-background !important;
-	& .products-list{
-		overflow-y:scroll;
-		height:100%;
-		border: 1px solid @gray-lighter;
-	}
 }
